# parallel-n-body

./: .gitignore  CMakeLists.txt  README.md
include/graphic/: graphic.hpp
include/nbody/: body.hpp  cuda.hpp  cuda_host.hpp
src/: body.cpp  body_pool.cpp  graphic.cpp  main.cpp
src/cuda/: body.cpp  body_pool.cpp  cuda.cu  main.cpp
